apps/synapse/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: synapse
spec:
  selector:
    app: synapse
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
