apps/synapse/synapse/route.yaml
# apps/synapse/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: synapse
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: synapse-https     
  hostnames:
    - "synapse.hoareau-marion.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/login
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/login
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/refresh
      backendRefs:
        - name: matrix-auth
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: "X-Forwarded-Proto"
                value: "https"
      backendRefs:
        - name: synapse
          port: 8008
